--- a/modal.css
+++ b/modal.css
@@ -1,3 +1,45 @@
+#print-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 30px;
+  border: 1px solid black;
+  border-radius: 3em;
+}
+
 .modal-columns {
   display: flex;
+}
+
+.print-opt {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  cursor: pointer;
+}
+
+.modal-imgs {
+  display: flex;
+  justify-content: center;
+
+  img {
+    width: 4em;
+  }
+}
+
+.x-button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: right;
 }
