--- a/modal.css
+++ b/modal.css
@@ -1,41 +1,62 @@
 #print-modal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: min(800px, 100%);
+
+  display: grid;
+  grid-template-columns: 1fr;
+
+  padding: 1rem;
+  border: 1px solid var(--text-normal);
+  border-radius: 1rem;
+
   background-color: white;
-  padding: 30px;
-  border: 1px solid black;
-  border-radius: 3em;
+
+  & > * {
+    grid-row-start: 1;
+    grid-column-start: 1;
+  }
+}
+
+.modal-content {
+  padding: 1rem;
 }
 
 .modal-columns {
   display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem;
 }
 
 .print-opt {
   display: flex;
+  padding: 0.5rem 1rem 1rem;
   flex-direction: column;
   align-items: center;
-  margin: 20px;
   cursor: pointer;
+
+  box-shadow: 0 2px 16px #aaaa;
 }
 
 .modal-imgs {
   display: flex;
   justify-content: center;
+  padding-top: 1rem;
 
-  img {
-    width: 4em;
+  & img {
+    width: 11rem;
   }
 }
 
 .x-button {
+  place-self: start;
+  z-index: 1;
   border: none;
   background: none;
+  font-size: 1.5rem;
   cursor: pointer;
 }
 
