--- a/modal.css
+++ b/modal.css
@@ -3,13 +3,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: min(800px, 100%);
+  width: min(900px, 100%);
+  max-height: 100%;
 
   display: grid;
   grid-template-columns: 1fr;
 
-  padding: 1rem;
-  border: 1px solid var(--text-normal);
+  border: 2px solid var(--text-normal);
   border-radius: 1rem;
 
   background-color: white;
@@ -21,14 +21,15 @@
 }
 
 .modal-content {
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .modal-columns {
+  max-width: 100%;
   display: flex;
   justify-content: center;
   gap: 2rem;
-  padding: 2rem;
+  padding-block: 2rem;
 }
 
 .print-opt {
@@ -51,24 +52,36 @@
 }
 
 .modal-imgs {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  justify-content: center;
+  display: grid;
   padding-top: 1rem;
+}
 
-  & img {
-    height: min(25vw, 420px);
+.stacked-imgs {
+  padding: 0rem 0 0 0;
+  overflow: clip;
+
+  & > img {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    height: 100%;
+
+    transition: all var(--speed-medium) ease-out;
   }
+}
+.print-opt:hover .stacked-imgs > :last-child {
+  translate: -50% 0;
 }
 
 .x-button {
-  place-self: start;
+  place-self: start end;
+  padding: 1rem;
   z-index: 1;
   border: none;
   background: none;
-  font-size: 1.5rem;
   cursor: pointer;
+  line-height: 1;
+  color: var(--text-normal);
+  font-size: 2.5rem;
 }
 
 .modal-header {
