--- a/style.css
+++ b/style.css
@@ -200,7 +200,9 @@ h5 {
 }
 .hero-image {
   margin-inline: auto;
-  box-shadow: 2px 4px 8px 0 #0003, 4px 8px 16px 0 #0002;
+  box-shadow:
+    2px 4px 8px 0 #0003,
+    4px 8px 16px 0 #0002;
 }
 
 @media (width <= 600px) {
@@ -223,6 +225,7 @@ h5 {
   place-items: center;
   height: 0;
   margin: calc(var(--height) / 2) 0px;
+  border-style: solid;
 }
 
 .fancy-hr::after {
