--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ h5 {
   padding: 0.75rem 2rem;
   margin-inline: auto;
   border-radius: 1rem;
+  border: unset;
 
   background: var(--button-gradient);
   box-shadow: var(--transform-offset) var(--transform-offset) 0
