--- a/style.css
+++ b/style.css
@@ -91,6 +91,10 @@ h6 {
 
 body {
   color: var(--text-normal);
+  background-image: linear-gradient(#fffd, #fffd),
+    url(./favicon/android-chrome-512x512.png);
+  background-size: 100px;
+  background-position: center top -75px;
 }
 
 main {
