--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ h5 {
   padding-left: 1ch;
 }
 .hero-list > li:last-child {
-  list-style-type: "\1F63A";
+  list-style-type: "\1F480";
 }
 
 /* Button */
