--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ h5 {
 
 /* List items */
 .hero-list {
-  font-size: 2rem;
+  font-size: 1.25em;
   list-style-type: "\1F431";
 }
 .hero-list > li {
