Fix animation style of button
The shadow wasn't working due to how ease works. With linear, it should
be cleaner.

--- a/style.css
+++ b/style.css
@@ -235,8 +235,8 @@ h5 {
   text-decoration: none;
 
   transition:
-    box-shadow var(--speed-fast) ease,
-    translate var(--speed-fast) ease;
+    box-shadow var(--speed-fast) linear,
+    translate var(--speed-fast) linear;
 
   &:hover {
     --transform-offset: 6px;
