--- a/style.css
+++ b/style.css
@@ -100,18 +100,15 @@ h6 {
 
 /** Main styles **/
 body {
-  --bg-overlay: #fffd;
   --bg-lines: #633300;
   --bg-size: 100px;
   --grid-gradient: transparent 0 48px, var(--bg-lines) 48px 50px,
     transparent 50px 100px;
   color: var(--text-normal);
-  background-image: linear-gradient(var(--bg-overlay), var(--bg-overlay)),
-    url(./post-this-cat-bg.png),
+  background-image: url(./post-this-cat-bg.png),
     url('data:image/svg+xml,<svg id="patternId" xmlns="http://www.w3.org/2000/svg"><defs><pattern id="a" patternUnits="userSpaceOnUse" width="100" height="100"><rect x="0" y="0" fill="hsla(0,0%,100%,0)"/><path d="M 10,-2.55e-7 V 20 Z M -1.1677362e-8,10 H 20 Z" stroke-width="1" stroke="%23633300" fill="none"/></pattern></defs><rect width="100%" height="100%" transform="translate(0,0)" fill="url(%23a)"/></svg>');
   background-size: var(--bg-size);
   background-position:
-    0 0,
     left top,
     left top;
 }
@@ -125,15 +122,30 @@ body {
 @keyframes body-animate {
   from {
     background-position:
-      0 0,
       left top,
       left top;
   }
   to {
     background-position:
-      0 0,
       calc(var(--bg-size) * 3) calc(var(--bg-size)),
       calc(var(--bg-size) * -4) calc(var(--bg-size) * -3);
+  }
+}
+
+.bg-cover {
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  background-color: #fff;
+  animation: bg-cover-in 1200ms ease-in-out forwards;
+}
+
+@keyframes bg-cover-in {
+  from {
+    background-color: #fff;
+  }
+  to {
+    background-color: #fffd;
   }
 }
 
